Delete align items to set up the correct size of the container

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -96,7 +96,6 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
   gap: 10px;
 
   @media (width >= 600px) {
